kubernetes/deployment_webapp_papyrusweb.yaml
#Copyright (c) 2024 CEA LIST
#Papyrusweb application deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papyrusweb-webapp-deployment
  namespace: papyrusweb
  labels:
    app: papyrusweb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: papyrusweb
  template:
    # Pod
    metadata:
      labels:
        app: papyrusweb
    spec:
      containers:
        - name: papyruswebapp
        # REPLACE WITH IMAGE URL
          image: IMAGE_URL/papyrusweb:2024.6.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2000m
              memory: 3400Mi
            requests:
              cpu: 400m
              memory: 1000Mi
      imagePullSecrets:
        - name: harbor-registry-pull-secret
