kubernetes/ingress_codegen.yaml
#Copyright (c) 2024 CEA LIST
#Ingress for Codegeneration service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: papyruswebrcp-ingress
  namespace: papyrusweb
  annotations:
  # The resources may be adapted following cluster capabilities
    cert-manager.io/cluster-issuer: "letsencrypt-name"
spec:
  ingressClassName: nginx
  rules:
  #replace HOSTNAME with a valid adress
  - host: HOSTNAME
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: papyruswebrcp-svc
            port:
              number: 8081
  tls:
    - hosts:
      - HOSTNAME
      secretName: HOSTNAME-tls
